--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -28,6 +28,7 @@
             --nav-link-color: #000000; /* Color de los enlaces del menú en modo claro */
             --section-bg-light: #f8f9fa; /* Fondo de secciones claras */
             --btn-outline-border: #000000; /* Borde del botón outline en modo claro */
+            --caption-color: #6c757d; /* Color de los pies de página en modo claro */
         }
         [data-theme="dark"] {
             --bg-color: #121212;   /* Fondo oscuro */
@@ -36,6 +37,7 @@
             --nav-link-color: #ffa94d; /* Color de los enlaces del menú en modo oscuro (naranja) */
             --section-bg-light: #1e1e1e; /* Fondo de secciones claras en modo oscuro */
             --btn-outline-border: #ffffff; /* Borde del botón outline en modo oscuro */
+            --caption-color: #adb5bd; /* Color de los pies de página en modo oscuro */
         }
 
         /* Reset de fondos y colores */
@@ -125,6 +127,13 @@
         .profile .dots-3 path,
         .profile .dots-4 path {
             fill: var(--text-color);
+        }
+        .footer a {
+            color: var(--caption-color);
+            text-decoration: none;
+        }
+        .footer a:hover {
+            color: var(--nav-link-color);
         }
     </style>
 </head>
@@ -284,59 +293,18 @@
                 </div>
             </div>
         </header>
-        <!-- About Section-->
+        <!-- About section-->
         <section class="bg-light py-5">
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xxl-8">
                         <div class="text-center my-5">
                             <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">Sobre mí</span></h2>
-                            <p class="lead fw-light mb-4">Me llamo <strong>Rick</strong> y mediante las palabras busco un mundo empático.</p>
-                            <p class="text-muted">Mi trabajo busca unir lo sensible con lo riguroso. Me interesa lo que hay entre líneas, en los silencios, en los discursos que duelen y también en los que curan. Siempre he sido un apasionado por la redacción y todo aquello relacionado con lo humano. Desde la antropología hasta las artes.</p>
+                            <p class="lead fw-light mb-4">Mi nombre es Rick Grisales, soy periodista y creativo.</p>
+                            <p class="text-muted">Me apasiona el poder de las palabras para conectar, inspirar y transformar. Como periodista, busco historias que importen; como creativo, exploro formas de contarlas que dejen huella. Actualmente, estoy estudiando Periodismo en la Universidad Complutense de Madrid y trabajando en proyectos que fusionan narrativa, cultura y sensibilidad humana.</p>
                             <div class="d-flex justify-content-center fs-2 gap-4">
-                                <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
-                                <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Sección de Proyectos destacados con animación -->
-        <section class="py-5 bg-light">
-            <div class="container px-5">
-                <div class="text-center mb-5" data-aos="fade-up">
-                    <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">Mis proyectos</span></h2>
-                </div>
-                <div class="position-relative">
-                    <div class="d-flex overflow-auto gap-4 pb-3" style="scroll-snap-type: x mandatory;" id="carousel-container">
-                        <!-- Proyecto 1 -->
-                        <div class="card flex-shrink-0" style="width: 20rem; scroll-snap-align: start;">
-                            <img src="assets/portadaarte.jpg" class="card-img-top" alt="Arte y naturaleza">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold">Arte y naturaleza</h5>
-                                <p class="card-text">Diálogo entre surrealismo y crisis ecológica. Un paseo por la biomorfología del siglo XX.</p>
-                                <a href="arte-naturaleza.html" class="btn btn-warning text-white fw-bold">Leer más</a>
-                            </div>
-                        </div>
-                        <!-- Proyecto 2 -->
-                        <div class="card flex-shrink-0" style="width: 20rem; scroll-snap-align: start;">
-                            <img src="assets/trump.jpg" class="card-img-top" alt="La política del engaño">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold">La política del engaño</h5>
-                                <p class="card-text">La desinformación como estrategia emocional en la política moderna.</p>
-                                <a href="poder-mentira.html" class="btn btn-warning text-white fw-bold">Leer más</a>
-                            </div>
-                        </div>
-                        <!-- Proyecto 3 -->
-                        <div class="card flex-shrink-0" style="width: 20rem; scroll-snap-align: start;">
-                            <img src="assets/portada-salo.jpg" class="card-img-top" alt="La maternidad en el arte">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold">La maternidad en el arte</h5>
-                                <p class="card-text">Interpretación crítica del juicio de Salomón desde lo humano y lo ético.</p>
-                                <a href="salomon.html" class="btn btn-warning text-white fw-bold">Leer más</a>
+                                <a class="text-gradient" href="https://www.instagram.com/rickgrisales"><i class="bi bi-instagram"></i></a>
+                                <a class="text-gradient" href="https://www.linkedin.com/in/rick-grisales-0a2b3a2a5"><i class="bi bi-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -345,16 +313,16 @@
         </section>
     </main>
     <!-- Footer-->
-    <footer class="bg-white py-4 mt-auto">
+    <footer class="py-4 mt-auto">
         <div class="container px-5">
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                 <div class="col-auto"><div class="small m-0">Copyright © Rick 2025</div></div>
                 <div class="col-auto">
-                    <a class="small" href="#!">Privacy</a>
+                    <a class="small" href="#!">Privacidad</a>
                     <span class="mx-1">·</span>
-                    <a class="small" href="#!">Terms</a>
+                    <a class="small" href="#!">Términos</a>
                     <span class="mx-1">·</span>
-                    <a class="small" href="#!">Contact</a>
+                    <a class="small" href="#!">Contacto</a>
                 </div>
             </div>
         </div>
@@ -363,49 +331,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+    <!-- AOS (Animate On Scroll) JS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
-    <!-- Script para modo oscuro -->
-    <script>
-        // Detecta si el sistema del usuario prefiere modo oscuro
-        const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-        // Revisa si el usuario ya eligió un tema en 'localStorage'
-        const userTheme = localStorage.getItem('theme');
-
-        if (userTheme) {
-            document.documentElement.setAttribute('data-theme', userTheme);
-        } else if (prefersDark) {
-            document.documentElement.setAttribute('data-theme', 'dark');
-        }
-
-        function toggleTheme() {
-            const currentTheme = document.documentElement.getAttribute('data-theme');
-            const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-            document.documentElement.setAttribute('data-theme', newTheme);
-            localStorage.setItem('theme', newTheme);
-            updateIcon(newTheme);
-        }
-
-        function updateIcon(theme) {
-            const icon = document.getElementById('theme-icon');
-            if (!icon) return;
-            icon.textContent = theme === 'dark' ? '☀️' : '🌙';
-        }
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const button = document.getElementById('theme-toggle');
-            if (button) {
-                button.addEventListener('click', toggleTheme);
-                const current = document.documentElement.getAttribute('data-theme') || 'light';
-                updateIcon(current);
-            }
-        });
-    </script>
-    <!-- Botón de cambio de tema -->
+    <!-- Theme toggle button -->
     <button id="theme-toggle" class="theme-toggle" aria-label="Cambiar tema">
         <span id="theme-icon">🌙</span>
     </button>
+    <!-- Dark mode script -->
+    <script src="js/dark-mode.js"></script>
 </body>
 </html>
