--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -11,13 +11,13 @@
     <!-- Custom Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 
-    <!-- ========== INCLUYO MISMO BLOQUE DE VARIABLES/ESTILOS QUE EN INDEX ========== -->
+    <!-- Estilos para modo oscuro -->
     <style>
         /* Variables de color */
         :root {
@@ -27,6 +27,7 @@
             --nav-link-color: #000000; /* Color de los enlaces del menú en modo claro */
             --section-bg-light: #f8f9fa; /* Fondo de secciones claras */
             --btn-outline-border: #000000; /* Borde del botón outline en modo claro */
+            --caption-color: #6c757d; /* Color de los pies de página en modo claro */
         }
         [data-theme="dark"] {
             --bg-color: #121212;   /* Fondo oscuro */
@@ -35,6 +36,7 @@
             --nav-link-color: #ffa94d; /* Color de los enlaces del menú en modo oscuro (naranja) */
             --section-bg-light: #1e1e1e; /* Fondo de secciones claras en modo oscuro */
             --btn-outline-border: #ffffff; /* Borde del botón outline en modo oscuro */
+            --caption-color: #adb5bd; /* Color de los pies de página en modo oscuro */
         }
 
         /* Reset de fondos y colores */
@@ -56,7 +58,7 @@
         /* Estilo del botón de cambio de tema */
         .theme-toggle {
             position: fixed;
-            top: 1.5rem; /* Ajusta según prefieras */
+            top: 1.5rem;
             right: 1.5rem;
             background: rgba(255, 255, 255, 0.1);
             border: none;
@@ -80,8 +82,29 @@
                 font-size: 1rem;
             }
         }
+
+        /* Ajustes para el menú desplegable */
+        .navbar-collapse {
+            z-index: 1000;
+        }
         .nav-link {
             color: var(--nav-link-color) !important;
+        }
+        .navbar-toggler {
+            border-color: var(--text-color);
+        }
+        .navbar-toggler-icon {
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 169, 77, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+        }
+
+        /* Ajustes para elementos específicos */
+        .text-muted {
+            color: var(--muted-text-color) !important;
+        }
+        .text-gradient {
+            background: linear-gradient(to right, #ff8a00, #e52e71);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
         .btn-outline-dark {
             color: var(--text-color);
@@ -95,42 +118,14 @@
             background-color: var(--bg-color);
             color: var(--text-color);
         }
-    </style>
-
-    <!-- ========== AQUÍ ESTÁ TU BLOQUE ORIGINAL PARA NO BORRAR NADA ========== -->
-    <style>
-        :root {
-            --bg-color: #ffffff;
-            --text-color: #000000;
+        .footer a {
+            color: var(--caption-color);
+            text-decoration: none;
         }
-
-        [data-theme="dark"] {
-            --bg-color: #121212;
-            --text-color: #ffffff;
-        }
-
-        body {
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .theme-toggle {
-            position: fixed;
-            bottom: 1.5rem; /* Ojo: en el index estaba top: 1.5rem, aquí dice bottom */
-            right: 1.5rem;
-            background: transparent;
-            border: 2px solid var(--text-color);
-            border-radius: 50%;
-            width: 44px;
-            height: 44px;
-            font-size: 1.2rem;
-            color: var(--text-color);
-            cursor: pointer;
-            z-index: 999;
+        .footer a:hover {
+            color: var(--nav-link-color);
         }
     </style>
-
 </head>
 <body class="d-flex flex-column h-100 bg-light">
     <main class="flex-shrink-0">
@@ -183,7 +178,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-8">
-                                        <div>Debido a mi independencia y mi estilo de vida ajetreado, no he tenido la posibilidad de trabajar en una empresa especializada en comunicacion. Estaré encantado de formar parte de tu empresa, mi inexperiencia no resta mis capacidades y mi talento.</div>
+                                        <div>Debido a mi independencia y mi estilo de vida ajetreado, no he tenido la posibilidad de trabajar en una empresa especializada en comunicacion. Estaré encantado de formar parte de tu empresa, mi in Experiencia no resta mis capacidades y mi talento.</div>
                                     </div>
                                 </div>
                             </div>
@@ -302,15 +297,15 @@
         </div>
     </main>
     <!-- Footer-->
-    <footer class="bg-white py-4 mt-auto">
+    <footer class="py-4 mt-auto">
         <div class="container px-5">
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                <div class="col-auto"><div class="small m-0">Copyright &copy; Rick 2025</div></div>
+                <div class="col-auto"><div class="small m-0">Copyright © Rick 2025</div></div>
                 <div class="col-auto">
                     <a class="small" href="#!">Privacidad</a>
-                    <span class="mx-1">&middot;</span>
+                    <span class="mx-1">·</span>
                     <a class="small" href="#!">Términos</a>
-                    <span class="mx-1">&middot;</span>
+                    <span class="mx-1">·</span>
                     <a class="small" href="#!">Contacto</a>
                 </div>
             </div>
@@ -320,13 +315,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-
-    <!-- El botón flotante -->
+    <!-- Theme toggle button -->
     <button id="theme-toggle" class="theme-toggle" aria-label="Cambiar tema">
         <span id="theme-icon">🌙</span>
     </button>
-
-    <!-- Script que tienes en dark-mode.js (o inline) -->
+    <!-- Dark mode script -->
     <script src="js/dark-mode.js"></script>
 </body>
 </html>
