--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -311,6 +311,45 @@
                 </div>
             </div>
         </section>
+        <!-- Sección de Proyectos destacados con animación -->
+        <section class="py-5 bg-light">
+            <div class="container px-5">
+                <div class="text-center mb-5" data-aos="fade-up">
+                    <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">Mis proyectos</span></h2>
+                </div>
+                <div class="position-relative">
+                    <div class="d-flex overflow-auto gap-4 pb-3" style="scroll-snap-type: x mandatory;" id="carousel-container">
+                        <!-- Proyecto 1 -->
+                        <div class="card flex-shrink-0" style="width: 20rem; scroll-snap-align: start;">
+                            <img src="assets/portadaarte.jpg" class="card-img-top" alt="Arte y naturaleza">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Arte y naturaleza</h5>
+                                <p class="card-text">Diálogo entre surrealismo y crisis ecológica. Un paseo por la biomorfología del siglo XX.</p>
+                                <a href="arte-naturaleza.html" class="btn btn-warning text-white fw-bold">Leer más</a>
+                            </div>
+                        </div>
+                        <!-- Proyecto 2 -->
+                        <div class="card flex-shrink-0" style="width: 20rem; scroll-snap-align: start;">
+                            <img src="assets/trump.jpg" class="card-img-top" alt="La política del engaño">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">La política del engaño</h5>
+                                <p class="card-text">La desinformación como estrategia emocional en la política moderna.</p>
+                                <a href="poder-mentira.html" class="btn btn-warning text-white fw-bold">Leer más</a>
+                            </div>
+                        </div>
+                        <!-- Proyecto 3 -->
+                        <div class="card flex-shrink-0" style="width: 20rem; scroll-snap-align: start;">
+                            <img src="assets/portada-salo.jpg" class="card-img-top" alt="La maternidad en el arte">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">La maternidad en el arte</h5>
+                                <p class="card-text">Interpretación crítica del juicio de Salomón desde lo humano y lo ético.</p>
+                                <a href="salomon.html" class="btn btn-warning text-white fw-bold">Leer más</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Footer-->
     <footer class="py-4 mt-auto">
