--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/poder-mentira.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/poder-mentira.html
@@ -134,17 +134,17 @@
             margin-bottom: 1rem;
         }
         .highlight-quote {
-            display: block;
-            font-style: italic;
-            font-size: 1.1rem;
-            line-height: 1.5;
-            margin: 1.5rem 0;
-            text-align: center;
-            position: relative;
-            background: linear-gradient(to right, #ffa94d, #111);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
+    display: block;
+    font-style: italic;
+    font-size: 1.1rem;
+    line-height: 1.5;
+    margin: 1.5rem 0;
+    text-align: center;
+    position: relative;
+    background: linear-gradient(to right, #ffa94d, #4dabf7); /* naranja a azul claro */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
         .highlight-quote::after {
             content: '';
             display: block;
