--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/poder-mentira.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/poder-mentira.html
@@ -185,7 +185,7 @@
     <section class="py-5">
         <div class="container px-5 custom-article">
             <h1 class="fw-bolder mb-4"><span class="gradient-title">La política del engaño</span></h1>
-            <span class="subtag">Reportaje / Opinión</span>
+            <span class="small text-muted d-inline-block subtag">Reportaje / Opinión</span>
             <img src="assets/trump.jpg" alt="Imagen de Donald Trump" class="obra" style="max-width: 100%; display: block; margin-left: auto; margin-right: auto;" />
             
             <p class="lead fw-bold fst-italic">
